--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -1,43 +1,19 @@
 <!--index.wxml-->
 <view class="container">
-
-  <!-- 用户 openid -->
-  <view class="userinfo">
-    <button 
-      open-type="getUserInfo" 
-      bindgetuserinfo="onGetUserInfo"
-      class="userinfo-avatar"
-      style="background-image: url({{avatarUrl}})"
-    ></button>
-    <view>
-      <button class="userinfo-nickname" bindtap="onGetOpenid">点击获取 openid</button>
+  <view class="title">
+    <image src="../../images/head1.jpg" width="100%" height="300"/>
+  </view>
+  <view class="pagebuy">
+    <view class="buycart">购物车</view>
+    <view class="buycart" bindtap="openbuy">加购物车</view>
+    <view class="buycart" bindtap="openbuy">立即购买</view>
+  </view>
+  <view class="openpanel" wx:if="{{isopen}}">
+    <view class="close" bindtap="closepanel"></view>
+    <view class="confittilel">选择尺寸:</view>
+    <view class="configs" wx:if="{{configlist.length>0}}">
+       <view class="config" wx:for="{{configlist}}" wx:key="index">{{item}}</view>
     </view>
+    <view class="surebuy" bindtap="suretobuy">确认</view>
   </view>
-
-
-  <!-- 上传图片 -->
-  <view class="uploader">
-    <view class="uploader-text" bindtap="doUpload">
-      <text>上传图片</text>
-    </view>
-    <view class="uploader-container" wx:if="{{imgUrl}}">
-      <image class="uploader-image" src="{{imgUrl}}" mode="aspectFit" bindtap="previewImg"></image>
-    </view>
-  </view>
-
-
-  <!-- 操作数据库 -->
-  <view class="uploader">
-    <navigator url="../databaseGuide/databaseGuide" open-type="navigate" class="uploader-text">
-      <text>前端操作数据库</text>
-    </navigator>
-  </view>
-
-  <!-- 新建云函数 -->
-  <view class="uploader">
-    <navigator url="../addFunction/addFunction" open-type="navigate" class="uploader-text">
-      <text>快速新建云函数</text>
-    </navigator>
-  </view>
-
 </view>
